# EpiSense

./: .dockerignore  .editorconfig  .gitignore  .prettierrc.json  DOCKER-README.md  POSTGRES-SETUP-SUMMARY.md  POSTGRES-TEST-REPORT.md  README.md  docker-compose.yml  simple_test.json  test-postgres.ps1  test-shewhart-new.ps1  test_observation.json
backend/: API-Examples.md  Dockerfile  EpiSense.sln  README.md  test-performance.ps1
deploy/: README.md
doc/: POSTGRES-QUICKSTART.md  README.md  ROADMAP.md  shewhart-conceitual.md  shewhart-step.md
doc/architecture-decision-records/: adr-001-adocao-de-csharp-e-dotnet.md  adr-002-use-of-mongodb-with-native-driver.md  adr-002-uso-de-mongodb-com-driver-nativo.md  adr-003-servicos-autonomos-com-comunicacao-orientada-a-eventos.md  adr-004-adocao-de-arquitetura-de-monolito-modular.md  adr-005-validacao-fhir-no-nivel-de-api.md  adr-006-arquitetura-hibrida-persistencia-mongodb-postgresql.md  adr-007-padrao-repository-especifico-por-contexto.md  adr-008-comunicacao-inter-modulos-via-callback.md  adr-009-resiliencia-postgresql-retry-policy.md  adr-010-processamento-assincrono-hangfire.md  adr-011-agregacao-sib-grave-como-suspeita.md
doc/architecture-haiku/: README.md
docker-init/: init-mongo.js  init-postgres.sql  init-scylla.cql  migration_v2.cql
fhir-generator/: .dockerignore  Dockerfile  README.md  pom.xml
fhir-server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  entrypoint.sh
fhir-server/src/: config.rs  db.rs  forwarder.rs  lib.rs  main.rs  metrics.rs  models.rs  retry_worker.rs  routes.rs
(+102 files in other folders)
